freebsd-buildutils (10.3~svn296373-4) UNRELEASED; urgency=medium

  * Add Build-Depends: dpkg-dev (>= 1.16.1.1) and use buildflags.mk
    to set CFLAGS, respecting DEB_BUILD_OPTIONS flags such as noopt
  * Enable hardening=+all, which includes PIE, relro and stack protector

 -- Steven Chamberlain <stevenc@debian.org>  Tue, 19 Jul 2016 10:13:07 +0100

freebsd-buildutils (10.3~svn296373-3) unstable; urgency=medium

  * Update my email address in Uploaders
  * Make `ar` command lines visible in the build log
  * Adding missing required build-arch, build-indep targets
  * Now using Standards-Version 3.9.8
  * Now using debhelper compat v9
  * Add missing ${misc:Depends} to freebsd-mk (to satisfy lintian;
    although it evaluates to an empty list currently)

 -- Steven Chamberlain <stevenc@debian.org>  Tue, 19 Jul 2016 09:08:38 +0100

freebsd-buildutils (10.3~svn296373-2) unstable; urgency=medium

  * Upload to unstable
  * Use new preferred hostname for upstream SVN with HTTPS
    (svn.freebsd.org).

 -- Steven Chamberlain <steven@pyro.eu.org>  Mon, 04 Apr 2016 12:34:17 +0100

freebsd-buildutils (10.3~svn296373-1) experimental; urgency=medium

  * New upstream snapshot of 10.3-RC1
  * Mark freebsd-mk as Multi-Arch: foreign (thanks, Helmut Grohne!)
  * Actually use the proper build architecture compiler
  * Map Debian's kfreebsd-armhf to FreeBSD's armv6 MACHINE_ARCH
  * Add *.test.mk files to freebsd-mk, allowing reverse-dependencies to
    use WITH_TESTS=yes
  * Use relative path in manpage symlinks
      - man_symlinks.diff

 -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 05 Mar 2016 00:27:01 +0000

freebsd-buildutils (10.3~svn295289-1) experimental; urgency=medium

  * New upstream snapshot of 10.3-BETA1
  * Make get-orig-source tarball reproducible
  * Refresh patches:
    - mk_eisa.diff
    - yacc_is_byacc.diff
    - 15_manpages_gzip.diff
    - avoid_defsyspath_collision.diff
    - hppa.diff
