@@ -3,6 +3,7 @@ freebsd-buildutils (10.3~svn296373-4) UNRELEASED; urgency=medium
   * Add Build-Depends: dpkg-dev (>= 1.16.1.1) and use buildflags.mk
     to set CFLAGS, respecting DEB_BUILD_OPTIONS flags such as noopt
   * Enable hardening=+all, which includes PIE, relro and stack protector
+  * Use architecture.mk instead of individual calls to dpkg-architecture
 
  -- Steven Chamberlain <stevenc@debian.org>  Tue, 19 Jul 2016 10:13:07 +0100
 
